DB構築とapp.py修正,ファイル構造変更

--- a/ChatApp/templates/login.html
+++ b/ChatApp/templates/login.html
@@ -15,6 +15,6 @@
         <input type="password" id="password" name="password" required><br><br>
         <input type="submit" value="ログイン">
     </form>
-    <p>アカウントをお持ちでない方は<a href="{{ url_for('signup_view') }}">こちら</a>から登録できます。</p>
+    <p>アカウントをお持ちでない方は<a href="{{ url_for('signup') }}">こちら</a>から登録できます。</p>
 </body>
 </html>
