--- a/ChatApp/templates/signup.html
+++ b/ChatApp/templates/signup.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>会員登録</title>
+    <title>新規登録</title>
 </head>
 <body>
-    <h1>会員登録</h1>
-    <form method="post" action="{{ url_for('signup_view') }}">
-        <label for="username">ユーザー名:</label>
-        <input type="text" id="username" name="username" required><br><br>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class="flashes">
+          {% for message in messages %}
+            <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+    <h1>新規登録</h1>
+    <form method="post" action="{{ url_for('signup') }}">
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email" ><br><br>
         <label for="password">パスワード:</label>
-        <input type="password" id="password" name="password" required><br><br>
+        <input type="password" id="password" name="password" ><br><br>
+        <label for="password">パスワード:</label>
+        <input type="password" id="password_second" name="password_second" required><br><br>
+        <label for="text">ニックネーム</label>
+        <input type="text" id="nickname" name="nickname" ><br><br>
+        <label for="text">icon</label>
+        <input type="file" id="icon" name="icon" ><br><br>
         <input type="submit" value="登録">
     </form>
     <p>既にアカウントをお持ちの方は<a href="{{ url_for('login_view') }}">こちら</a>からログインできます。</p>
 </body>
-</html>
