パスワード再設定機能修正

--- a/ChatApp/templates/login.html
+++ b/ChatApp/templates/login.html
@@ -9,7 +9,7 @@
     <p style="color:red;">{{ error }}</p>
     {% endif %}
     <form method="post" action="{{ url_for('login_view') }}">
-        <label for="email">Emeil:</label>
+        <label for="email">Email:</label>
         <input type="text" id="email" name="email" required><br><br>
         <label for="password">パスワード:</label>
         <input type="password" id="password" name="password" required><br><br>
