--- a/ChatApp/templates/index.html
+++ b/ChatApp/templates/index.html
@@ -6,7 +6,13 @@
 <body>
     <h1>Welcome to our website!</h1>
     <p>ここにホーム画面のコンテンツを記述します。</p>
-    <a href="{{ url_for('login') }}">ログイン</a>
-    <a href="{{ url_for('register') }}">会員登録</a>
+    <a href="{{ url_for('login_view') }}">ログイン</a>
+    <a href="{{ url_for('signup') }}">会員登録</a>
+
+
+
+
+
+    <a href="{{ url_for('logout') }}">ログアウト</a>
 </body>
 </html>
