--- a/ChatApp/templates/password_reset.html
+++ b/ChatApp/templates/password_reset.html
@@ -1,37 +1,42 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>パスワード再設定</title>
-</head>
-<body>
-    <h1>パスワードをリセット</h1>
+{% extends 'base.html' %}
+{% block title %}password_reset{% endblock %}
+{% block page_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/password_reset.css') }}">
+{% endblock %}
 
+{% block content %}
+<div class="container">
+  <img class="flower left" src="{{ url_for('static', filename='image/flower_left.jpg') }}">
+  <div class="reset-container">
+    <h1>偏愛会議</h1>
+    <h2>パスワード再設定</h2>
     <!-- エラーメッセージや通知の表示 -->
     {% with messages = get_flashed_messages() %}
       {% if messages %}
-        <ul>
+        <div class="flashes">
           {% for message in messages %}
-            <li style="color: red;">{{ message }}</li>
+            <p>{{ message }}</p>
           {% endfor %}
-        </ul>
+        </div>
       {% endif %}
     {% endwith %}
-
     <!-- パスワードリセット用フォーム -->
     <form method="POST" action="{{ url_for('password_reset_process') }}">
-        <label for="email">登録済みメールアドレス：</label><br>
-        <input type="email" name="email" required><br><br>
-
-        <label for="new_password">新しいパスワード：</label><br>
-        <input type="password" name="new_password" required><br><br>
-
-        <label for="new_password_second">もう一度パスワードを入力：</label><br>
-        <input type="password" name="new_password_second" required><br><br>
-
-        <button type="submit">パスワードをリセットする</button>
+      <div>
+        <input placeholder="登録済みメールアドレス" type="email" name="email" required/>
+      </div>
+      <div>
+        <input placeholder="新しいパスワード" type="password" name="new_password" required/>
+      </div>
+      <div>
+        <input placeholder="新しいパスワード(確認用)" type="password" name="new_password_second" required/>
+      </div>
+      <div>
+        <button class="password-reset-button" type="submit">登録</button>
+      </div>
     </form>
-
-    <p><a href="{{ url_for('login_view') }}">ログイン画面に戻る</a></p>
-</body>
-</html>
+    <a class="switch-login-button" href="{{ url_for('login_view') }}">ログインはこちら</a>
+  </div>
+  <img class="flower right", src="{{ url_for('static', filename='image/flower_right.jpg') }}">
+</div>
+{% endblock %}
