--- a/ChatApp/templates/signup.html
+++ b/ChatApp/templates/signup.html
@@ -19,7 +19,7 @@
         </div>
       {% endif %}
     {% endwith %}
-    <form class="form-signup" method="post" action="{{ url_for('signup') }}">
+    <form class="form-signup" method="post" action="{{ url_for('signup_process') }}">
       <div>
         <input placeholder="メールアドレス" type="text" id="email" name="email" required/>
       </div>
