エラー改善

--- a/ChatApp/templates/room_search.html
+++ b/ChatApp/templates/room_search.html
@@ -35,7 +35,7 @@
         <option value="comic">漫画・アニメ・ゲーム</option>
         <option value="music">音楽</option>
         <option value="idol">アイドル</option>
-        <option value="musle">筋トレ</option>
+        <option value="muscle">筋トレ</option>
         <option value="sports">スポーツ</option>
         <option value="sauna">サウナ</option>
         <option value="relax">リラックス</option>
