--- a/ChatApp/templates/profile.html
+++ b/ChatApp/templates/profile.html
@@ -7,16 +7,24 @@
 {% block content %}
 <div class="wrapper">
   <div class="menu-container">
-    <h3>偏愛会議</h3>
-    <h4>メニュー</h4>
-    <a class="menu-button" href="{{ url_for('edit_profile_view') }}">プロフィール編集</a><br>
-    <a class="menu-button" href="{{ url_for('index_view') }}">ルーム一覧</a><br>
-    <a class="logout-button" href="{{ url_for('logout') }}">ログアウト</a>
+    <div class="menu-header">
+      <h3>偏愛会議</h3>
+    </div>
+    <div class="menu-buttons">
+      <h4>メニュー</h4>
+      <a class="menu-button" href="{{ url_for('edit_profile_view') }}"><i class="fas fa-gear"></i> プロフィール編集</a>
+      <a class="menu-button" href="{{ url_for('index_view') }}"><i class="fas fa-home"></i> ルーム一覧</a>
+    </div>
+    <div class="menu-footer">
+      <a class="logout-button" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i> ログアウト</a>
+    </div>
   </div>
   <div class="room-container">
-    <h4>プロフィール画面</h4>
-    <div>
-      <p>ここにプロフィールを表示する</p>
+    <div class="room-header">
+      <h5>プロフィール画面</h5>
+    </div>
+    <div class="room-main">
+      <!-- <p>プロフィールを表示する</p> -->
     </div>
   </div>
 </div>
