--- a/ChatApp/templates/room_search_result.html
+++ b/ChatApp/templates/room_search_result.html
@@ -7,21 +7,30 @@
 {% block content %}
 <div class="wrapper">
   <div class="menu-container">
-    <h3>偏愛会議</h3>
+    <div class="menu-header">
+      <h3>偏愛会議</h3>
+    </div>
+    <div class="menu-buttons">
     <h4>メニュー</h4>
-    <a class="menu-button" href="{{ url_for('room_search_view') }}">ジャンル検索</a><br>
-    <a class="menu-button" href="{{ url_for('index_view') }}">ルーム一覧</a><br>
-    <a class="logout-button" href="{{ url_for('logout') }}">ログアウト</a>
+      <a class="menu-button" href="{{ url_for('room_search_view') }}"><i class="fas fa-search"></i> ジャンル検索</a>
+      <a class="menu-button" href="{{ url_for('index_view') }}"><i class="fas fa-home"></i> ルーム一覧</a>
+    </div>
+    <div class="menu-footer">
+      <a class="logout-button" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i> ログアウト</a>
+    </div>
   </div>
   <div class="room-container">
-    <h4>{{ genre }} ジャンルの検索結果</h4>
+    <div class="room-header">
+      <h5>{{ genre }}の検索結果</h5>
+    </div>
+    <div class="room-main">
       {% for channel in channels %}
-  <h2>ルームタイトル：{{ channel.channel_name }}</h2>
-  {% if  channel.channel_comment is not none %}
-  <p>コメント：{{ channel.channel_comment }}</p>
-  {% endif %}
-  <small>作成日時:{{ channel.created_at }}</small>
-{% endfor %}
+        <h4>ルームタイトル：{{ channel.channel_name }}</h4>
+          {% if  channel.channel_comment is not none %}
+            <p>コメント：{{ channel.channel_comment }}</p>
+          {% endif %}
+        <small>作成日時:{{ channel.created_at }}</small>
+      {% endfor %}
   </div>
 </div>
 
