プロフィール関連

--- a/ChatApp/templates/profile.html
+++ b/ChatApp/templates/profile.html
@@ -12,7 +12,7 @@
     </div>
     <div class="menu-buttons">
       <h4>メニュー</h4>
-      <a class="menu-button" href="{{ url_for('edit_profile_view') }}"><i class="fas fa-gear"></i> プロフィール編集</a>
+      <a class="menu-button" href="{{ url_for('edit_profile_view', user_id=current_user.user_id) }}"><i class="fas fa-gear"></i> プロフィール編集</a>
       <a class="menu-button" href="{{ url_for('index_view') }}"><i class="fas fa-home"></i> ルーム一覧</a>
     </div>
     <div class="menu-footer">
