--- a/ChatApp/templates/edit_profile.html
+++ b/ChatApp/templates/edit_profile.html
@@ -12,7 +12,7 @@
     </div>
     <div class="menu-buttons">
       <h4>メニュー</h4>
-      <a class="menu-button" href="{{ url_for('profile_view') }}"><i class="fas fa-user"></i> プロフィール</a>
+      <a class="menu-button" href="{{ url_for('profile_view', user_id=current_user.user_id) }}"><i class="fas fa-user"></i> プロフィール</a>
     </div>
     <div class="menu-footer">
       <a class="logout-button" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i> ログアウト</a>
@@ -23,7 +23,7 @@
       <h5>プロフィール編集</h5>
     </div>
     <div class="room-main">
-      <form method="POST" action="{{ url_for('edit_profile_view') }}">
+      <form method="POST" action="{{ url_for('edit_profile_view', user_id=current_user.user_id) }}">
         <!-- 編集用の入力フォーム -->
         <button type="submit">登録</button>
       </form>
